plugins {
    id("maven-publish")
    id("java-gradle-plugin")
}

group("user11681")
version("0.0.1")

sourceCompatibility = 16
targetCompatibility = 16

gradlePlugin {
    plugins {
        wheel {
            id = "user11681.wheel"
            implementationClass = "user11681.wheel.WheelPlugin"
        }
    }
}

repositories {
    mavenCentral()

    maven {url = "https://auoeke.jfrog.io/artifactory/maven"}
    maven {url = "https://maven.fabricmc.net"}
}

dependencies {
    api("net.fabricmc:fabric-loom:latest.release")
    api("net.gudenau.lib:unsafe:latest.release")
    api("user11681:reflect:latest.release")

    compileOnly("org.jetbrains:annotations:latest.release")

    testImplementation("org.junit.jupiter:junit-jupiter:latest.release")
}

java {
    withSourcesJar()
}

jar {
    from(file("LICENSE"))
}

publishing {
    repositories {
        mavenLocal()

        maven {
            url = "https://auoeke.jfrog.io/artifactory/maven"

            credentials {
                username(System.env.ARTIFACTORY_USERNAME)
                password(System.env.ARTIFACTORY_PASSWORD)
            }
        }
    }
}
